Polish playable demo systems